# slipstream

./: BENCHMARKS.md  CLAUDE.md  PROGRESS.md  README.md  VERIFICATION.md  hatch_build.py  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  install_aws_cli.sh  install_opencv.sh  requirements-ffcv.txt
benchmarks/: __init__.py  benchmark_decode.py  benchmark_ffcv_loader.py  benchmark_loader.py  benchmark_multi_crop_named.py  benchmark_multicrop_debug.py  benchmark_output_format.py  benchmark_raw_io.py  benchmark_transforms.py  benchmark_yuv420_decode.py  profile_decode_resize.py  results.md  run_all.py  utils.py
benchmarks/results/: raw_io_PSYC-LKQL73CVM6.json  raw_io_nolan-25.json  v0.3.0-cluster.md
dataprep/notebooks/: 01_imagenet_val.ipynb  02_imagenet_visualize.ipynb  02_imagenet_visualize.py
dataprep/scripts/: build_imagenet_cache.py  upload_imagenet_cache.py  verify_imagenet_cache.py
docs/: ADVANCED.md
experiments/format_comparison/: README.md  benchmark_formats.py  convert_formats.py  convert_yuv420.py
libslipstream/: __init__.py  libslipstream.cpp  setup.py
notebooks/: 00_environment_test.ipynb  01_dataset_basics.ipynb  02_field_indexes.ipynb  02_loader_benchmarks.ipynb  03_visual_verification.ipynb  04_yuv420_verification.ipynb  05_phase4_features.ipynb  06_transform_verification.ipynb  08_multi_crop_named.ipynb  09_pipeline_presets.ipynb  10_yoked_crop_visualization.ipynb  11_huggingface_datasets.ipynb  12_imagefolder_datasets.ipynb  13_ffcv_datasets.ipynb  14_yuv_colorspace_decoders.ipynb  15_remote_cache.ipynb  17_resize_short_crop_long.ipynb  18_random_embed.ipynb  19_circular_fade.ipynb  20_resize_crop_embed.ipynb  21_coords_embed.ipynb
notebooks/dev/: 04_yuv420_verification.ipynb  06_transform_verification.ipynb  07_direct_rrc_distribution.ipynb  08_multi_crop_named.ipynb  13_ffcv_datasets.ipynb  14_yuv_colorspace_decoders.ipynb  16_named_copies.ipynb  17_resize_short_crop_long.ipynb  18_random_embed.ipynb  22_random_erasing.ipynb  23_mixup_cutmix.ipynb  debug_s5cmd_progress.ipynb
notebooks/prep/: 01_imagenet_val.ipynb  01_imagenet_val.py
scripts/: test_imagenet_prep.py  verify_model_accuracy.py  verify_pipeline.py
slipstream/: __init__.py  cache.py  dataset.py  loader.py  pipelines.py  s3_sync.py  stats.py  version.py  vis.py
slipstream/backends/: __init__.py  ffcv_file.py  ffcv_style.py
slipstream/decoders/: __init__.py  base.py  cpu.py  crop.py  decode.py  gpu.py  multicrop.py  numba_decoder.py  utils.py  yuv420_decoder.py
slipstream/pipelines/: __init__.py  _common.py  byol.py  ipcl.py  lejepa.py  multicrop_preset.py  simclr.py  supervised.py
slipstream/prep/: __init__.py  imagenet.py
slipstream/readers/: __init__.py  ffcv.py  imagefolder.py  streaming.py
slipstream/transforms/: __init__.py  _compat.py  base.py  brightness_contrast.py  color_jitter.py  color_space.py  conversion.py  effects.py  embed.py  erasing.py  functional.py  functional_tensor.py  geometric.py  grayscale.py  mixup.py  normalization.py
slipstream/utils/: __init__.py  cache_dir.py  crop.py  hash.py  image_header.py  noise.py
tests/: __init__.py  test_cache_dir.py  test_cache_integrity.py  test_cache_resilience.py  test_cache_roundtrip.py  test_decode_correctness.py  test_direct_rrc.py  test_embed.py  test_erasing.py  test_ffcv_reader.py  test_ffcv_to_slipcache.py  test_ffcv_verification.py  test_functional_accuracy.py  test_huggingface.py  test_imagefolder.py  test_imagefolder_to_slipcache.py  test_imagefolder_verification.py  test_imports.py  test_litdata_to_slipcache.py  test_litdata_verification.py  test_mixup.py  test_remote_cache.py  test_resize_short_crop_long.py  test_transforms.py  test_warmup_cache.py  test_yoked_crops.py  test_yuv_roundtrip.py
