[project]
name = "visionlab-slipstream"
version = "0.1.0"
description = "High-performance data loading for PyTorch vision workloads"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core (no version pinning like ffcv required)
    "numpy",
    "torch",
    "torchvision",
    "tqdm",
    # Numba for JIT-compiled batch loading
    "numba",
    # LitData for streaming datasets
    "litdata>=0.2.59",
    # PyTurboJPEG for fast JPEG decoding
    "PyTurboJPEG@git+https://github.com/lilohuang/PyTurboJPEG.git",
    # AWS/S3 support
    "boto3",
    "fsspec[s3]",
    "s3fs>=2024.0.0",
    # HuggingFace support (hf:// URIs)
    "datasets",
    "huggingface_hub",
    "hf_transfer",
    "polars", # Required by litdata for parquet indexing
    "pyarrow", # Required by litdata for parquet file reading
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "ipykernel",
    "jupyterlab",
    "ipywidgets",
    "pandas",
    "matplotlib",
    "seaborn",
    "nbstripout",
    "scipy>=1.15.3",
]

# Experimental image format comparison (QOI, JPEG XL)
# Install with: uv sync --group experiment
experiment = [
    "qoi",
]

# GPU acceleration dependencies (nvImageCodec + CV-CUDA)
# Install with: uv sync --group gpu
gpu = [
    "nvidia-nvimgcodec-cu12>=0.2.0",
    "cvcuda-cu12>=0.5.0",
]

# Route torch to CUDA (Linux) or CPU (others)
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
# Include compiled C extensions even though *.so is in .gitignore
artifacts = ["libslipstream/_libslipstream*"]

[tool.hatch.build.targets.wheel]
packages = ["slipstream", "libslipstream"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "imagenet: marks tests requiring ImageNet data",
    "s3: marks tests requiring S3 access (deselect with '-m \"not s3\"')",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
